--- a/coin-frontend/package.json
+++ b/coin-frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.9",
     "buffer": "^6.0.3",
     "cra-template": "1.2.0",
+    "dayjs": "^1.11.13",
     "jsonwebtoken": "^9.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
