--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,11 @@ dependencies {
     
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    
+    implementation 'jakarta.validation:jakarta.validation-api:3.0.0'
+	implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+    
 }
 
 tasks.named('test') {
